# elips

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  RELEASE.md  netlify.toml  package.json
.github/workflows/: build.yml  release.yml  test.yml
benchmarks/: BenchMain.cpp
bindings/python/: CHANGELOG.md  MANIFEST.in  README.md  elips_python.cpp  pyproject.toml  setup.py  test.py
bindings/python/elips/: __init__.py  _core.pyi  core.py  errors.py  modern.py  types.py
bindings/python/elips/_modern/: __init__.py  _records.py  arena.py  connect.py  engine.py  models.py  typing.py
cli/src/: Json.hpp  main.cpp
docs/: architecture.md  cli.md  cookbook.md  cpp_sdk.md  eql.md  python_sdk.md  roadmap.md  storage.md
docs/adr/: ADR-0001-cpp23-core.md  ADR-0002-embedded-only.md  ADR-0003-hnsw-primary-index.md  ADR-0004-wal-format.md  ADR-0005-isolation-level.md  ADR-0006-pybind11.md  ADR-0007-snapshot-plus-wal.md  ADR-0008-file-locking.md  ADR-0009-dynamic-schema.md  ADR-0010-eql-language.md  ADR-GPU-001-multi-backend-strategy.md  ADR-GPU-002-cuvs-vs-custom-kernels.md  ADR-GPU-003-gpu-build-cpu-serve.md  ADR-GPU-004-memory-management.md  ADR-GPU-005-dynamic-batching.md  ADR-GPU-006-apple-unified-memory.md  ADR-GPU-007-precision-strategy.md  ADR-GPU-008-fallback-chain.md  ADR-GPU-009-sycl-portability.md  ADR-GPU-010-vulkan-fallback.md  README.md
docs/architecture/: binding-flow.md  build-system.md  faiss-gpu-acceleration-design.md  local-embedding-system.md  memory-flow.md  runtime-flow.md  system-overview.md
docs/cpp/api-reference/: config.md  vault.md
docs/cpp/getting-started/: quickstart.md
docs/internals/: gpu-engine.md  lock-manager.md  transaction-engine.md
docs/overview/: architecture.md  introduction.md
docs/python/api-reference/: config-and-enums.md  database.md  eql.md  filter.md  utilities.md  vault.md
docs/python/architecture/: package-structure.md
docs/python/bindings/: pybind11-architecture.md
docs/python/getting-started/: installation.md  quickstart.md
docs/python/typing/: type-stubs.md
elips_docs/: .gitignore  netlify.toml  package.json  vite.config.ts
elips_docs/src/: styles.css
elips_docs/src/components/: AskAI.tsx  Chrome.tsx  Code.tsx  Page.tsx  Shortcuts.tsx
elips_docs/src/lib/: tutorial.ts
elips_docs/src/routes/: chat.tsx  community.tsx  contact.tsx  docs.design-decisions.tsx  docs.guides.tsx  docs.installation.tsx  docs.internals.lock-manager.tsx  docs.performance.tsx  docs.roadmap.tsx  docs.security.tsx  docs.tutorial.index.tsx  faq.tsx  help.tsx  index.tsx  sitemap[.]xml.ts
examples/cpp/: 01_getting_started.cpp
examples/python/: 01_getting_started.py
include/elips/: Config.hpp  elips.hpp
include/elips/domain/: Errors.hpp  Record.hpp  RecordID.hpp  SearchResult.hpp  Vector.hpp
include/elips/gpu_engine/: DynamicBatcher.hpp  GpuBruteForceIndex.hpp  GpuBuffer.hpp  GpuConfig.hpp  GpuDeviceInfo.hpp  GpuDistributedIndex.hpp  GpuGraphIndex.hpp  GpuHybridIndex.hpp  GpuIVFFlatIndex.hpp  GpuIVFPQIndex.hpp  GpuIndexPort.hpp  GpuIndexTransferManager.hpp  GpuMetricsSnapshot.hpp  GpuPort.hpp  GpuProfiler.hpp  PinnedBuffer.hpp  UnifiedBuffer.hpp
include/elips/index_engine/: ExactIndex.hpp  HierarchicalGraphIndex.hpp  IndexFactory.hpp  IndexPort.hpp  IndexSnapshot.hpp  IndexTransferPort.hpp
include/elips/kernel/: LockManager.hpp
include/elips/metadata/: Filter.hpp
include/elips/query_engine/: AST.hpp  EQLLexer.hpp  EQLParser.hpp  QueryExecutor.hpp
include/elips/storage/: Serialization.hpp  WAL.hpp
public/: robots.txt
src/: Database.cpp  EQLLexer.cpp  EQLParser.cpp  ExactIndex.cpp  Filter.cpp  HierarchicalGraphIndex.cpp  IndexFactory.cpp  LocalTextEmbedder.cpp  LockManager.cpp  Metrics.cpp  QueryExecutor.cpp  RecordID.cpp  WAL.cpp  routeTree.gen.ts  styles.css
src/components/: Chrome.tsx  Code.tsx  LessonRenderer.tsx  Shortcuts.tsx  SketchDiagram.tsx
src/gpu_engine/: CMakeLists.txt  GpuBruteForceIndex.cpp  GpuDistributedIndex.cpp  GpuGraphIndex.cpp  GpuHybridIndex.cpp  GpuIVFFlatIndex.cpp  GpuIVFPQIndex.cpp  GpuIndexTransferManager.cpp  GpuQuantizationPipeline.cpp
src/lib/: content.ts  tutorial.ts
src/routes/: __root.tsx  changelog.tsx  chat.tsx  community.tsx  contact.tsx  contributing.tsx  cookies.tsx  docs.advanced.tsx  docs.algorithms.tsx  docs.api.tsx  docs.architecture.tsx  docs.cli.tsx  docs.configuration.tsx  docs.core-concepts.tsx  docs.cpp-sdk.tsx  docs.design-decisions.tsx  docs.eql.tsx  docs.examples.tsx  docs.gpu-engine.tsx  docs.guides.tsx  docs.index.tsx  docs.installation.tsx  docs.internals.lock-manager.tsx  docs.internals.transaction-engine.tsx  docs.performance.tsx  docs.project-history.tsx  docs.python-sdk.tsx  docs.roadmap.tsx  docs.security.tsx  docs.storage.tsx  docs.tutorial.$lesson.tsx  docs.tutorial.index.tsx  faq.tsx  help.tsx  index.tsx  privacy.tsx  sitemap[.]xml.ts  terms.tsx
tests/concurrency/: multi_reader_test.cpp  single_writer_test.cpp
tests/integration/: local_text_embedder_test.cpp  roundtrip_test.cpp  transaction_filter_test.cpp
tests/parity/: CpuGpuRecallParityTest.cpp
tests/python/: README.md  test_bindings.py  test_local_embedder.py
tests/recovery/: wal_recovery_test.cpp
tests/unit/: config_test.cpp  durability_test.cpp  eql_edge_test.cpp  eql_test.cpp  exact_edge_cases_test.cpp  exact_index_test.cpp  filter_edge_test.cpp  hnsw_edge_cases_test.cpp  hnsw_recall_test.cpp  metadata_index_test.cpp  metrics_test.cpp  record_id_test.cpp  scan_test.cpp  vector_test.cpp
(+24 files in other folders)
